fix(notification): z-index in .scl-toast-stack (see #1767)

--- a/packages/components/src/global/scale.css
+++ b/packages/components/src/global/scale.css
@@ -66,6 +66,7 @@
   top: 0;
   inset-inline-end: 0;
   z-index: var(--scl-z-index-70);
+  z-index: 100; /* https://github.com/telekom/scale/pull/1767/files */
   width: 28rem;
   max-width: 100%;
   max-height: 100%;
